test_regress/t/t_runflag_errorlimit_bad.out
[0] %Error: t_runflag_errorlimit_bad.v:9: top.t: One
-Info: t/t_runflag_errorlimit_bad.v:9: Verilog $stop, ignored due to +verilator+error+limit
[0] %Error: t_runflag_errorlimit_bad.v:10: top.t: Two
-Info: t/t_runflag_errorlimit_bad.v:10: Verilog $stop, ignored due to +verilator+error+limit
[0] %Error: t_runflag_errorlimit_bad.v:11: top.t: Three
%Error: t/t_runflag_errorlimit_bad.v:11: Verilog $stop
Aborting...
